--- a/docs/pages/components/action-banner.mdx
+++ b/docs/pages/components/action-banner.mdx
@@ -1,4 +1,5 @@
 import { ComponentLayout } from "components/layouts/ComponentLayout";
+import { Screenshot } from "components/core/Screenshot/Screenshot";
 import { Example } from "components/examples/Example";
 import { DefaultBanner } from "components/examples/ActionBanner";
 import { ActionBanner } from "@nice-digital/nds-action-banner";
@@ -16,9 +17,9 @@ export const meta = {
 
 Use action banners to provide a call to action with context, particularly when drawing attention to the key call to action on the page. They can also be used to break up a page layout and give visual interest.
 
-The action banner highlights a key action users can take. The colour adds contrast and breaks up the page.
+<Screenshot image="action-banner.png" alt="Screenshot of the action banner component" caption="The action banner highlights a key action users can take. The colour adds contrast and breaks up the page." />
 
-## When not use
+## When not to use
 
 Don't use for large blocks of content. An action banner is designed as a short interruption on the page to call attention to a key action or goal. There should be a short heading and one or two sentences of content maximum.
 
@@ -135,16 +136,5 @@ Component meets WCAG AA guidelines for accessibility on:
 ## Research/evidence
 
 No research done on the component at this time
-
-## Help improve this page
-
-To help make sure that this page is useful, relevant and up to date, you can:
-
-- Share your research or feedback on GitHub
-- Propose a change
-
-## Need help
-
-If you've got a question about the NICE Design System, contact the team. (Link TBC)
 
 export default ({ children }) => <ComponentLayout meta={meta}>{children}</ComponentLayout>;
