--- a/docs/pages/foundations/spacing.mdx
+++ b/docs/pages/foundations/spacing.mdx
@@ -1,5 +1,5 @@
 import { ComponentLayout } from "components/layouts/ComponentLayout";
-import { Block } from "components/Block/Block";
+import { Block } from "components/core/Block/Block";
 
 export const meta = {
 	title: "Spacing"
