NDS-377 Add button component docs

--- a/docs/pages/components/alert.mdx
+++ b/docs/pages/components/alert.mdx
@@ -116,7 +116,7 @@ Use an alert to give the user something they need to know in the context of the 
 
 ## When not to use alerts
 
--   Use alerts sparingly; there’s evidence that people often miss them, and using them too often is likely to worsen this problem.
+-   Use alerts sparingly; there's evidence that people often miss them, and using them too often is likely to worsen this problem.
 -   Do not use alerts if the information is directly relevant in context to what the user is doing on the page.
 
 
