--- a/docs/pages/components/alphabet.mdx
+++ b/docs/pages/components/alphabet.mdx
@@ -42,7 +42,7 @@ On A-Z list page the alphabet component should be placed at the top of the page 
 
 <Screenshot image="alphabet-1.png" alt="Screenshot of the alphabet component listing health topics" caption="The alphabet component sits above the A-Z list panels." />
 
-The component can also be used on it’s own as a navigation route into A to Z list pages. For example it the BNF mega menu:
+The component can also be used on it's own as a navigation route into A to Z list pages. For example it the BNF mega menu:
 
 <Screenshot image="alphabet-2.png" alt="Screenshot of the alphabet component in the BNF mega menu" />
 
