--- a/docs/pages/components/breadcrumbs.mdx
+++ b/docs/pages/components/breadcrumbs.mdx
@@ -50,7 +50,7 @@ If using other navigational elements on the page, such as a sidebar, consider wh
 </CH.Code>
 </Example>
 
-The breadcrumb should start with your ‘home’ page and end with the parent section of the current page. You don't need to show the current page in the breadcrumb because this information is in the main page heading (H1).
+The breadcrumb should start with your 'home' page and end with the parent section of the current page. You don't need to show the current page in the breadcrumb because this information is in the main page heading (H1).
 
 Always place breadcrumbs at the top of a page.
 
