NDS-377 Tidy up card docs page

--- a/docs/pages/components/card.mdx
+++ b/docs/pages/components/card.mdx
@@ -14,13 +14,12 @@ import {
 
 export const meta = {
 	title: "Card",
+	description: "A navigation component, used as an overview and entry point to access more detailed information on a topic.",
 	npmUrl: "https://www.npmjs.com/package/@nice-digital/nds-card",
 	gitHubUrl: "https://github.com/nice-digital/nice-design-system/blob/main/components/nds-card"
 };
 
-# {meta.title}
-
-A card is a navigation component used as an overview and entry point to access more detailed information on a topic.
+## Overview
 
 There are two types:
 
@@ -274,16 +273,5 @@ Text contrast - Text has a contrast ratio of at least 4.5:1 for small text and a
 ## Research/evidence
 
 Card lists were tested as part of research on how people use search on the website. There we no observed issues with the component when searching.
-
-## Help improve this page
-
-To help make sure that this page is useful, relevant and up to date, you can:
-
-- Share your research or feedback on GitHub
-- Propose a change
-
-## Need help?
-
-If you’ve got a question about the NICE Design System, contact the team. (Link TBC)
 
 export default ({ children }) => <ComponentLayout meta={meta}>{children}</ComponentLayout>;
